--- a/translations/messages.ko.po
+++ b/translations/messages.ko.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "언어"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "존재하는 과목 코드입니다. 다른 코드를 선택하시기 바랍니다."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "그룹 목록"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr ""
 msgid "Number of question"
 msgstr ""
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr ""
 
 msgid "Save and exit"
