--- a/translations/messages.ca_ES.po
+++ b/translations/messages.ca_ES.po
@@ -5705,7 +5705,7 @@ msgstr "Importar usuaris LDAP en un curs"
 msgid "Import LDAP users and a step into a session"
 msgstr "Importar usuaris LDAP i una etapa en aquesta sessió"
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr "Sincronització LDAP: Importar usuaris/etapes a les sessions"
 
 msgid "Assessments tab"
@@ -8882,7 +8882,7 @@ msgstr "idioma"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Trist, però aquell codi de curs ja existeix. Si us plau esculli'n un altre."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "Llista de grups"
 
 msgid "The target folder does not exist"
@@ -13313,7 +13313,7 @@ msgstr "Per favor, introdueixi una pregunta"
 msgid "Number of question"
 msgstr "Nombre de qüestions"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Aquest codi ja existeix"
 
 msgid "Save and exit"
