--- a/translations/messages.da.po
+++ b/translations/messages.da.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "sprog"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Beklager, men den valgte kursuskode eksisterer allerede. Vælg venligst en anden."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "gruppeliste"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr "Indtast et spørgsmål"
 msgid "Number of question"
 msgstr "Antal spørgsmål"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Koden eksisterer allerede"
 
 msgid "Save and exit"
