--- a/translations/messages.eo.po
+++ b/translations/messages.eo.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "Esperanto"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Tiu kurskodo jam ekzistas. Bonvolu elekti alian."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "Gruplisto"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr ""
 msgid "Number of question"
 msgstr ""
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr ""
 
 msgid "Save and exit"
