--- a/translations/messages.fa.po
+++ b/translations/messages.fa.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "فرانسوی"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "کددرس  مورد نظر شما قبلاً توسط فرد دیگری استفاده شده است. لطفاً کد دیگری انتخاب کنید"
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "لیست گروه ها"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr ""
 msgid "Number of question"
 msgstr ""
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr ""
 
 msgid "Save and exit"
