--- a/translations/messages.fi.po
+++ b/translations/messages.fi.po
@@ -5699,7 +5699,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8876,7 +8876,7 @@ msgstr "kieli"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Kurssikoodi on jo käytössä. Ole hyvä ja valitse toinen."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "ryhmälista"
 
 msgid "The target folder does not exist"
@@ -13307,7 +13307,7 @@ msgstr "Syötä kysymys"
 msgid "Number of question"
 msgstr "Kysymysten määrä"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Koodi on jo käytössä"
 
 msgid "Save and exit"
