--- a/translations/messages.gl_ES.po
+++ b/translations/messages.gl_ES.po
@@ -5705,7 +5705,7 @@ msgstr "Importar usuarios LDAP nun curso"
 msgid "Import LDAP users and a step into a session"
 msgstr "Importar usuarios LDAP y una etapa en esta sesión"
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr "Sincronización LDAP: Importar usuarios/etapas nas sesións"
 
 msgid "Assessments tab"
@@ -8882,7 +8882,7 @@ msgstr "galego"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Parece que o código do curso xa existe. Por favor, escolle outro código."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "lista de grupos"
 
 msgid "The target folder does not exist"
@@ -13313,7 +13313,7 @@ msgstr "Introduza unha pregunta, por favor"
 msgid "Number of question"
 msgstr "Número da pregunta"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Este código xa existe"
 
 msgid "Save and exit"
