--- a/translations/messages.hr.po
+++ b/translations/messages.hr.po
@@ -5698,7 +5698,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8875,7 +8875,7 @@ msgstr "jezik"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Žao nam je, ali ta je šifra kolegija već u uporabi. Molimo odaberite drugu."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "popis skupina"
 
 msgid "The target folder does not exist"
@@ -13306,7 +13306,7 @@ msgstr "Molim unesite pitanje"
 msgid "Number of question"
 msgstr "Broj pitanja"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Ova šifra već postoji"
 
 msgid "Save and exit"
