--- a/translations/messages.hu.po
+++ b/translations/messages.hu.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "magyar"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Sajnos ez a kurzus kód már létezik. Kérjük válassz egy másikat!"
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "csoport lista"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr "Kérem, tegyen fel egy kérdést"
 msgid "Number of question"
 msgstr "Kérdések száma"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Ez a kód már létezik"
 
 msgid "Save and exit"
