--- a/translations/messages.pl.po
+++ b/translations/messages.pl.po
@@ -5698,8 +5698,8 @@ msgstr "Importuj użytkowników LDAP do kursu"
 msgid "Import LDAP users and a step into a session"
 msgstr "Importuj użytkowników LDAP oraz etap do sesji"
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
-msgstr "LDAP synchro: Importuj studentów/Etapy do sesji kursów"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
+msgstr "LDAP synchronization: Importuj studentów/Etapy do sesji kursów"
 
 msgid "Assessments tab"
 msgstr "Karta oceny"
@@ -8875,7 +8875,7 @@ msgstr "język"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Kod kursu już istnieje. Wybierz inny."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "Lista grup"
 
 msgid "The target folder does not exist"
@@ -13306,7 +13306,7 @@ msgstr "Proszę wpisać pytanie"
 msgid "Number of question"
 msgstr "Numer pytania"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Kod już istnieje"
 
 msgid "Save and exit"
