--- a/translations/messages.ru.po
+++ b/translations/messages.ru.po
@@ -5698,7 +5698,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8875,7 +8875,7 @@ msgstr "язык"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Извините, но такой код курса уже существует. Пожалуйста, выберите другой."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "Список группы"
 
 msgid "The target folder does not exist"
@@ -13306,7 +13306,7 @@ msgstr "Пожалуйста, введите вопрос"
 msgid "Number of question"
 msgstr "Номер вопроса"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Такой код уже существует"
 
 msgid "Save and exit"
