--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -5705,7 +5705,7 @@ msgstr "Importovať LDAP používateľov do kurzu"
 msgid "Import LDAP users and a step into a session"
 msgstr "Importovať LDAP používateľov a etapu do stretnutia"
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr "LDAP synchronizácia: Importovať študentov/etapy do stretnutia"
 
 msgid "Assessments tab"
@@ -8882,7 +8882,7 @@ msgstr "jazyk"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "Prepáčte, ale tento kód kurzu je už použitý. Zvolte prosím iný."
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "Zoznam skupín"
 
 msgid "The target folder does not exist"
@@ -13313,7 +13313,7 @@ msgstr "Prosím zadajte otázku"
 msgid "Number of question"
 msgstr "Počet otázok"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "Tento kód už existuje"
 
 msgid "Save and exit"
