--- a/translations/messages.zh_CN.po
+++ b/translations/messages.zh_CN.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "语言"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "对不起，课程代码已经存在，请选择另外一个"
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "群组列表"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr "输入题目"
 msgid "Number of question"
 msgstr "问题数目"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "代码已存在"
 
 msgid "Save and exit"
