--- a/translations/messages.zh_TW.po
+++ b/translations/messages.zh_TW.po
@@ -5697,7 +5697,7 @@ msgstr ""
 msgid "Import LDAP users and a step into a session"
 msgstr ""
 
-msgid "LDAP synchro: Import learners/steps into course sessions"
+msgid "LDAP synchronization: Import learners/steps into course sessions"
 msgstr ""
 
 msgid "Assessments tab"
@@ -8874,7 +8874,7 @@ msgstr "語言"
 msgid "Sorry, but that course code already exists. Please choose another one."
 msgstr "對不起，這課程編號已經存在，請選另外一個。"
 
-msgid "Groups list"
+msgid "Group list"
 msgstr "群組清單"
 
 msgid "The target folder does not exist"
@@ -13305,7 +13305,7 @@ msgstr "請輸入問題"
 msgid "Number of question"
 msgstr "問題數量"
 
-msgid "This code already exist"
+msgid "This code already exists"
 msgstr "編號已經存在"
 
 msgid "Save and exit"
